--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
-                                <li><span>UI/UX</span><br>Designing Web/App interface</li>
+                                <li><span>Web Development</span><br>Designing Web/App interface</li>
                                 <li><span>Web Development</span><br>Web App Development</li>
                             </ul>
                         </div>
@@ -66,8 +66,8 @@
 
                         <div class="tab-contents" id="education">
                             <ul>
-                                <li><span>UI/UX</span><br>Designing Web/App interface</li>
-                                <li><span>Web Development</span><br>Web App Development</li>
+                                <li><span>2023</span><br>UI/UX Trainee at SAIL Innovation Lab</li>
+                                <li><span>2017-2022</span><br>High School Diploma</li>
                             </ul>
                         </div>
                 </div>
@@ -165,10 +165,9 @@
                         <p><i class="fa-solid fa-paper-plane"></i>salakolateef07@gmail.com</p>
                         <p><i class="fa-solid fa-square-phone"></i>09158425356</p>
                         <div class="social-icons">
-                            <a href=""><i class="fa-brands fa-github"></i></a>
-                            <a href=""><i class="fa-brands fa-facebook"></i></a>
+                            <a href="https://github.com/Ayomi789"><i class="fa-brands fa-github"></i></a>
                             <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/abdullateef-salako-18764b2a9/"><i class="fa-brands fa-linkedin"></i></a>
                         </div>
                         <a href="./assets/Salako.cv.pdf" id="BTN" target="_blank">Download CV</a>
                     </div>
