--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <div class="layer">
                 <h3 style="text-align: center;">A Food Recipe Website</h3>
                 <p style="text-align: center;">This website gives you a food recipe depending on the ingredient you inputed </p>
-                <a href=""><i class="fa-solid fa-link"></i></a>
+                <a href="https://dmrecipe.netlify.app/"><i class="fa-solid fa-link"></i></a>
               </div>
             </div>
 
