--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <a href=""><i class="fa-brands fa-x-twitter"></i></a>
                             <a href="https://www.linkedin.com/in/abdullateef-salako-18764b2a9/"><i class="fa-brands fa-linkedin"></i></a>
                         </div>
-                        <a href="./assets/Salako.cv.pdf" id="BTN" target="_blank">Download CV</a>
+                        <a href="./assets/Salako.cv.pdf" id="BTN">Download CV</a>
                     </div>
                     <div class="contact-right">
                         <form action="">
