--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <script src="./port.js"></script>
+    <script src="./port.js" defer></script>
     <script src="https://kit.fontawesome.com/bf903bc4eb.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -186,13 +186,3 @@
          </div>
 </body>
 </html>
-
-<script>
- var sidemeu = document.getElementById("sidemenu");
-    function openmenu(){
-        sidemeu.style.right ="0"
-    }
-    
-    function closemenu(){
-        sidemeu.style.right ="-200px"
-    }</script>
